--- a/data/authors/me.yaml
+++ b/data/authors/me.yaml
@@ -1,116 +1,117 @@
 schema: hugoblox/author/v1
 slug: me
 is_owner: true
+
 name:
-  display: Dr. Alex Johnson
-  given: Alex
-  family: Johnson
-  alternate: ''  # Example: 王伟
-  pronunciation: ''  # Example: Wáng Wěi
+  display: Dr. Leonardo Grando
+  given: Leonardo
+  family: Grando
   pronouns: he/him
+
 postnominals:
-  - PhD
-  - MIEEE
+  - Ph.D.
+  - M.Sc.
+
 status:
-  icon: "☕️"
-role: Senior AI Research Scientist
+  icon: "🎓"
+
+role: Professor & Researcher
+
 bio: |
-  Alex Johnson is a Senior AI Research Scientist at Meta AI. His research
-  has been published in top conferences like NeurIPS and ICML, with over
-  10,000 citations. Alex is passionate about pushing the boundaries of AI
-  while ensuring ethical development.
+  Dr. Leonardo Grando is a researcher focused on Complex Systems, Artificial Intelligence, and Agent-Based Simulation (NetLogo). 
+  He holds a Ph.D. in Technology from UNICAMP and works as an Assistant Professor at UNASP, pushing the boundaries of Educational Technology and IoT.
 
 affiliations:
-  - name: Meta AI
-    url: https://ai.meta.com/
+  - name: UNICAMP
+    url: https://www.unicamp.br/
+  - name: UNASP
+    url: https://www.unasp.br/
 
 links:
-  - icon: at-symbol
-    url: mailto:alex.johnson@example.com
+  - icon: hero/envelope
+    url: mailto:lgrando@gmail.com
     label: E-mail Me
-  - icon: brands/x
-    url: https://x.com/example
-  - icon: brands/github
-    url: https://github.com/example
-  - icon: brands/linkedin
-    url: https://www.linkedin.com/in/example/
-  - icon: academicons/google-scholar
-    url: https://scholar.google.com/citations?user=example
+  - icon: academicons/lattes
+    url: http://lattes.cnpq.br/1278197446520776
+    label: Lattes CV
   - icon: academicons/orcid
-    url: https://orcid.org/0000-0002-1825-0097
+    url: https://orcid.org/0000-0002-0448-209X
+    label: ORCID
+  - icon: academicons/google-scholar
+    url: https://scholar.google.com/citations?user=cXC9OsoAAAAJ
+    label: Google Scholar
+  - icon: brands/github
+    url: https://github.com/lgrando1
+    label: GitHub
+  - icon: brands/linkedin
+    url: https://www.linkedin.com/in/lgrando123/
+    label: LinkedIn
+  - icon: hero/globe-alt
+    url: https://lgrando1.github.io/
+    label: Personal Website
 
 interests:
-  - Large Language Models
-  - Computer Vision
-  - Reinforcement Learning
-  - AI Ethics
+  - Artificial Intelligence & ML
+  - Agent-Based Simulation (NetLogo)
+  - Internet of Things (IoT) & Drones
+  - Data Science & Mining
+  - Educational Technology
 
 education:
-  - degree: PhD Computer Science
-    institution: Stanford University
-    start: 2015-09-01
-    end: 2019-06-30
+  - degree: Ph.D. in Technology
+    institution: UNICAMP - State University of Campinas
+    start: 2020-03-01
+    end: 2025-12-14
     summary: |
-      Thesis on scaling laws for neural language models. Published 5 papers in NeurIPS and ICML.
-    button:
-      text: Download dissertation
-      url: /resume.pdf
-      icon: hero/arrow-down-tray
-  - degree: MS Computer Science
-    institution: Carnegie Mellon University
-    start: 2013-09-01
-    end: 2015-05-31
-  - degree: BS Computer Science
-    institution: MIT
-    start: 2009-09-01
-    end: 2013-05-31
+      Research focused on Complex Systems and Technology.
+  
+  - degree: Technologist in Systems Analysis
+    institution: UNICID - Cidade de São Paulo University
+    start: 2022-01-01
+    end: 2024-12-31
+
+  - degree: M.Sc. in Technology
+    institution: UNICAMP - State University of Campinas
+    start: 2018-01-01
+    end: 2020-12-31
+
+  - degree: MBA in Quality Management
+    institution: FATEP
+    start: 2014-01-01
+    end: 2015-12-31
+
+  - degree: B.S. Materials Engineering
+    institution: UNESP - Guaratinguetá
+    start: 2004-01-01
+    end: 2009-12-31
 
 experience:
-  - role: Senior AI Research Scientist
-    org: Meta AI
-    start: 2020-01-01
+  - role: Assistant Professor
+    org: UNASP
+    start: 2021-01-01
     summary: |
-      Leading research on multimodal AI systems. Contributed to Llama 2 and other open-source models.
-    button:
-      text: View portfolio
-      url: /
-      icon: hero/arrow-down-tray
-  - role: AI Research Intern
-    org: OpenAI
-    start: 2019-06-01
-    end: 2019-12-31
+      Teaching Computer Science and Technology courses.
+  
+  - role: Researcher
+    org: UNICAMP
+    start: 2018-01-01
     summary: |
-      Worked on GPT-3 scaling. Co-authored paper on prompt engineering.
+      Conducting research on AI, Networks, and Complex Systems.
 
 skills:
   - name: Technical Skills
     items:
-      - label: Pytho
+      - label: Python
+        level: 5
+      - label: NetLogo
         level: 5
       - label: Machine Learning
-        level: 5
-      - label: Cloud Computing
         level: 4
-  - name: Research & Communication
+      - label: Data Analysis
+        level: 4
+  - name: Languages
     items:
-      - label: Academic Writing
+      - label: Portuguese
         level: 5
-      - label: Conference Presentations
+      - label: English
         level: 4
-      - label: Grant Proposals
-        level: 4
-
-languages:
-  - name: English
-    level: 5
-    label: Native
-  - name: Spanish
-    level: 4
-    label: Fluent
-
-awards:
-  - title: Best Paper Award
-    awarder: NeurIPS
-    date: "2022-12-01"
-    summary: Awarded for groundbreaking work on efficient training of large models.
-    icon: hero/trophy
