--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -23,7 +23,7 @@ hugoblox:
     description: "The highly-customizable Hugo Academic theme powered by Hugo Blox Builder. Easily create your personal academic website."
     # Social accounts (used for meta tags like Twitter Cards)
     social:
-      twitter: "BuildLore" # Twitter/X handle for Twitter Cards (without @)
+      twitter: lgrando123
     name: Leonardo Grando
 
   # ────────────────────────────────────────────────────────────────────────────
