--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -1,27 +1,34 @@
 # Navigation Links
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
-  #     desired widget in your `content/home/` folder.
-  #   The weight parameter defines the order that the links will appear in.
+#     desired widget in your `content/home/` folder.
+#   The weight parameter defines the order that the links will appear in.
 
 main:
   - name: Bio
+    identifier: jr860ugi
     url: /
     weight: 10
   - name: Papers
+    identifier: 9ShE-6D4
     url: /#papers
-    weight: 11
-  - name: Talks
-    url: /#talks
-    weight: 12
-  - name: News
-    url: /#news
-    weight: 13
-  - name: Experience
-    url: experience/
     weight: 20
-  - name: Projects
-    url: projects/
+  - name: Talks
+    identifier: luQfBYWA
+    url: /#talks
     weight: 30
-  - name: Courses
-    url: courses/
+  - name: Experience
+    identifier: jdqGboFA
+    url: experience/
     weight: 40
+  - name: Projects
+    identifier: xKj98AB-
+    url: projects/
+    weight: 50
+  - name: Courses
+    identifier: BAd0CSpk
+    url: courses/
+    weight: 60
+  - name: Blog
+    identifier: 94xh77zJ
+    url: /#news
+    weight: 70
