--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -54,17 +54,12 @@ security:
 sitemap:
   _merge: deep
 
-comments:
-        enabled: true
-        provider: giscus
-
-        giscus:
-            repo: lgrando1/discussao
-            repoID: R_kgDOQopR-w
-            category: General
-            categoryID: DIC_kwDOQopR-84CzyVm
-            mapping: pathname
-            lightTheme:
-            darkTheme:
-            reactionsEnabled: 1
-            emitMetadata: 0
+cascade:
+  - target:
+      path: /post/**
+    params:
+      commentable: true
+  - target:
+      path: /docs/**
+    params:
+      commentable: false # Disable on docs by default
