--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -114,7 +114,7 @@ hugoblox:
   # ────────────────────────────────────────────────────────────────────────────
   copyright:
     # Copyright notice - supports {year}, {name}, {license} placeholders
-    notice: "© {year} {name}. This work is licensed under {license}"
+    notice: "© {year} {name}. This work is licensed under {license} Este site não utiliza cookies de rastreamento. Comentários via GitHub."
     license:
       type: cc # cc | all_rights | custom
       allow_derivatives: false
