--- a/data/authors/me.yaml
+++ b/data/authors/me.yaml
@@ -102,7 +102,7 @@ experience:
   - role: "Assistant Professor"
     org: "Centro Universitário Adventista de São Paulo"
     start: "2024-08-01"
-    end: "2025-12-30"
+    end: ""
     summary: "Lecturer for System Information and Computer Engineering. Deliver engaging lectures and facilitate discussions to enhance students’ understanding of key concepts in System Information and Computer Engineering.
 
 
