--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -238,7 +238,8 @@ hugoblox:
   # Regional formatting preferences
   # ────────────────────────────────────────────────────────────────────────────
   locale:
-    date_format: "Jan 2, 2006" # Go time format
+    #date_format: "Jan 2, 2006" # Go time format
+    date_format: "Jan 2006"
     time_format: "3:04 PM"
     address_format: en-us
 
