--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -216,7 +216,7 @@ hugoblox:
   # Search engine site verification codes
   # ────────────────────────────────────────────────────────────────────────────
   verification:
-    google: ""
+    google: "Qm5er-tME_lAFoBOlZaY6k-PM9YCZsbRvutaMxk83MI"
     bing: ""
     baidu: ""
     yandex: ""
