--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -168,10 +168,10 @@ hugoblox:
   # Site search
   # ────────────────────────────────────────────────────────────────────────────
   search:
-    enable: true
+    enable: false
     # Trending/suggested search terms
     suggestions: []
-    # Quick action shortcuts in search modal
+    # Quqqqeeick action shortcuts in search modal
     quick_actions: []
 
   # ────────────────────────────────────────────────────────────────────────────
