--- a/data/authors/me.yaml
+++ b/data/authors/me.yaml
@@ -35,6 +35,9 @@ links:
   - icon: "brands/linkedin"
     url: "https://www.linkedin.com/in/lgrando123/"
     label: "LinkedIn"
+  - icon: brands/telegram
+    icon_pack: fab
+    link: https://t.me/simulacao  # <-- Ajuste o link aqui
 interests:
   - "Artificial Intelligence & ML"
   - "Agent-Based Simulation (NetLogo)"
