--- a/data/authors/me.yaml
+++ b/data/authors/me.yaml
@@ -38,6 +38,9 @@ links:
   - icon: brands/telegram
     icon_pack: fab
     link: https://t.me/simulacao  # <-- Ajuste o link aqui
+  - icon: brands/mastodon
+    icon_pack: fab
+    link: https://mastodon.social/@profdrlgrando
 interests:
   - "Artificial Intelligence & ML"
   - "Agent-Based Simulation (NetLogo)"
