--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -1,47 +1,27 @@
 # ══════════════════════════════════════════════════════════════════════════════
 # HUGO BLOX CONFIGURATION
-# Schema: hugoblox.com/schema/v2
-# Tutorial: https://docs.hugoblox.com/tutorial/
-# Documentation: https://docs.hugoblox.com/
 # ══════════════════════════════════════════════════════════════════════════════
 hugoblox:
   schema: "2.0"
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # IDENTITY
-  # Site-level branding (for people/profiles, use the author system in content/authors/)
-  # ────────────────────────────────────────────────────────────────────────────
   identity:
-    # Site name - shown in navbar, footer, copyright, and browser title by default
-    # Legal entity for copyright notices (defaults to name if not set)
     organization: ""
-    # Schema.org type for structured data
-    type: person # person | organization | local_business
-    # Social accounts (used for meta tags like Twitter Cards)
+    type: person 
     social:
       twitter: lgrando123
     name: Leonardo Grando
     tagline: Professor, Researcher & Technology Ph.D.
     description: Technology Ph.D. with expertise in Complex Systems, Agent-Based Simulation, and IoT device coordination. Professor of Computer Engineering.
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # THEME
-  # Color and visual design system
-  # ────────────────────────────────────────────────────────────────────────────
   theme:
-    # Mode: 'light', 'dark', or 'system' (follows OS preference)
     mode: system
-    # Theme pack: name from data/themes/ or { light: "x", dark: "y" } for mix-and-match
     pack: "retro"
-    # Optional: Override theme pack colors
     colors:
-      primary: "" # Tailwind palette name or hex (e.g., "indigo" or "#6366f1")
+      primary: "" 
       secondary: ""
-      neutral: "" # Affects gray utilities (text-gray-*, bg-gray-*)
-    # Optional: Mode-specific color overrides
+      neutral: "" 
     colors_light: {}
     colors_dark: {}
-    # Optional: Semantic surface color overrides
     surfaces:
       background: ""
       foreground: ""
@@ -52,83 +32,49 @@ hugoblox:
         background: ""
         foreground: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # TYPOGRAPHY
-  # Font and text sizing
-  # ────────────────────────────────────────────────────────────────────────────
   typography:
-    # Font: 'sans' (Inter), 'serif' (Roboto Slab), or 'native' (system fonts)
     font: "native"
-    # Size: 'sm', 'md', 'lg', or 'xl' (affects base font size and scale)
     size: "lg"
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # LAYOUT
-  # Spacing and shape tokens
-  # ────────────────────────────────────────────────────────────────────────────
   layout:
-    # Border radius: 'none', 'sm', 'md', 'lg', or 'full'
     radius: "md"
-    # Spacing density: 'compact', 'comfortable', or 'spacious'
     spacing: "comfortable"
-    # Avatar shape in author profiles
-    avatar_shape: circle # circle | square | rounded
+    avatar_shape: circle 
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # HEADER
-  # Site header and navigation bar
-  # ────────────────────────────────────────────────────────────────────────────
   header:
     enable: true
-    # Header style variant
-    style: navbar # navbar | navbar-simple | minimal
-    # Stick to top on scroll
+    style: navbar 
     sticky: true
-    # Menu alignment
-    align: center # left | center | right
-    # Feature toggles
+    align: center 
     search: true
     theme_toggle: true
     theme_picker: true
     language_switcher: true
-    # Call-to-action button
     cta:
       enable: false
       text: ""
       url: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # FOOTER
-  # Site footer
-  # ────────────────────────────────────────────────────────────────────────────
   footer:
-    # Footer style variant
-    style: minimal # minimal | columns | centered
+    style: minimal 
     language_switcher: true
-    # Custom footer text (HTML supported)
     text: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # COPYRIGHT
-  # Legal notices and licensing
-  # ────────────────────────────────────────────────────────────────────────────
   copyright:
-    # Copyright notice - supports {year}, {name}, {license} placeholders
     notice: "© {year} {name}. This work is licensed under {license}. Este site não utiliza cookies de rastreamento ou coleta dados pessoais (LGPD)."
     license:
-      type: cc # cc | all_rights | custom
+      type: cc 
       allow_derivatives: false
       share_alike: true
       allow_commercial: false
 
   # ────────────────────────────────────────────────────────────────────────────
-  # SEO
-  # Search engine optimization - overrides and technical settings
+  # SEO - CORRIGIDO PARA ELIMINAR O ERRO DO GOOGLE
   # ────────────────────────────────────────────────────────────────────────────
   seo:
-    # Browser tab title override (defaults to identity.name if not set)
     title: "Leonardo Grando | Technology PhD"
-    # For local_business identity type only
+    # Desativa a trilha de navegação (breadcrumb) que está gerando o erro de campo vazio
+    breadcrumb: false 
     location:
       address:
         city: "Piracicaba"
@@ -137,7 +83,6 @@ hugoblox:
       coordinates:
         latitude: null
         longitude: null
-    # AI/LLM crawler guidance (llms.txt)
     ai:
       allow:
         - /
@@ -145,42 +90,24 @@ hugoblox:
       note: "Guidance for AI crawlers - customize to match your public content."
       contact: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # CONTENT
-  # Content rendering and behavior
-  # ────────────────────────────────────────────────────────────────────────────
   content:
-    # Math rendering
     math:
       enable: true
-    # Table of contents
     toc:
       enable: true
-    # Reading time estimates
     reading_time:
       enable: true
-    # Academic citations
     citations:
-      style: apa # apa | mla | chicago | ieee
+      style: apa 
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # SEARCH
-  # Site search
-  # ────────────────────────────────────────────────────────────────────────────
   search:
     enable: false
-    # Trending/suggested search terms
     suggestions: []
-    # Quqqqeeick action shortcuts in search modal
     quick_actions: []
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # COMMENTS
-  # User comments system
-  # ────────────────────────────────────────────────────────────────────────────
   comments:
     enable: false
-    provider: "giscus" # giscus | disqus | commento
+    provider: "giscus" 
     giscus:
       repo: "lgrando1/discussao"
       repo_id: "R_kgDOQopR-w"
@@ -191,15 +118,11 @@ hugoblox:
     commento:
       url: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # ANALYTICS
-  # Traffic and behavior analytics
-  # ────────────────────────────────────────────────────────────────────────────
   analytics:
     google:
-      measurement_id: "" # Google Analytics 4: G-XXXXXXXXXX
+      measurement_id: "" 
     google_tag_manager:
-      container_id: "" # GTM-XXXXXXX
+      container_id: "" 
     plausible:
       domain: ""
     fathom:
@@ -211,10 +134,6 @@ hugoblox:
     baidu:
       site_id: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # VERIFICATION
-  # Search engine site verification codes
-  # ────────────────────────────────────────────────────────────────────────────
   verification:
     google: "Qm5er-tME_lAFoBOlZaY6k-PM9YCZsbRvutaMxk83MI"
     bing: ""
@@ -223,67 +142,36 @@ hugoblox:
     pinterest: ""
     naver: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # REPOSITORY
-  # Source code repository for "Edit this page" links
-  # ────────────────────────────────────────────────────────────────────────────
   repository:
     enable: false
-    url: "https://github.com/lgrando1/lgrando1.github.io" # e.g., 
+    url: "https://github.com/lgrando1/lgrando1.github.io" 
     branch: main
     content_dir: content
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # LOCALE
-  # Regional formatting preferences
-  # ────────────────────────────────────────────────────────────────────────────
   locale:
-    date_format: "Jan 2, 2006" # Go time format
+    date_format: "Jan 2, 2006" 
     time_format: "3:04 PM"
     address_format: en-us
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # SECURITY
-  # Security headers and policies (requires blox-plugin-netlify)
-  # ────────────────────────────────────────────────────────────────────────────
   security:
     csp:
       policy: ""
       report_only: false
-    frame_options: deny # deny | sameorigin | allow
+    frame_options: deny 
     permissions_policy: ""
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # PRIVACY
-  # Privacy and compliance features
-  # ────────────────────────────────────────────────────────────────────────────
   privacy:
     enable: false
     privacy_policy_url: "/privacy/"
     anonymize_analytics: true
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # DEBUG
-  # Development and debugging (hidden in production)
-  # ────────────────────────────────────────────────────────────────────────────
   debug:
     enable: false
     hud:
-      position: bottom-left # top-left | top-right | bottom-left | bottom-right
+      position: bottom-left 
       opacity: 1.0
     export_logs: true
 
-  # ────────────────────────────────────────────────────────────────────────────
-  # PRO
-  # Pro subscription features and affiliate program
-  # ────────────────────────────────────────────────────────────────────────────
   pro:
-    # Hide "Powered by HugoBlox" attribution
-    # Requires: Pro subscription to support HugoBlox via alternative means
-    # Note: Even with Pro, you can keep this false to support open source!
-    # Get Pro: https://hugoblox.com/pro
     hide_attribution: false
-
-    # Affiliate referral code for rewards program
-    # Join affiliate program: https://hugoblox.com/affiliates
     affiliate_code: ""
